--- a/contact.html
+++ b/contact.html
@@ -75,18 +75,18 @@
     <div>
       <h3 class="float-md-start mb-0">Sito_Git</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
-        <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Home</a>
+        <a class="nav-link fw-bold py-1 px-0" href="index.html">Home</a>
         <a class="nav-link fw-bold py-1 px-0" href="#">Products</a>
         <a class="nav-link fw-bold py-1 px-0" href="#">Information</a>
         <a class="nav-link fw-bold py-1 px-0" href="cv.html">CV</a>
-        <a class="nav-link fw-bold py-1 px-0" href="contact.html">Contact us</a>
+        <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Contact us</a>
       </nav>
     </div>
   </header>
 
   <main class="px-3">
     <h1></h1>
-    <p class="lead">This is the Home Page</p>
+    <p class="lead">This is the Contact Page</p>
   </main>
 
   <footer class="mt-auto text-white-50">
