Tommaso: bugfixing on prodotti.html and info_azienda.html

--- a/prodotti.html
+++ b/prodotti.html
@@ -86,7 +86,7 @@
 
   <main class="px-3">
     <h1></h1>
-    <p class="lead">This is the Home Page</p>
+    <p class="lead">This is the Products Page</p>
   </main>
 
   <footer class="mt-auto text-white-50">
